--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,17 @@
   <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
   </ul>
+  <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+  </ul>
   </div>
 </nav>
+  <div class="container" style="margin-top: 2em">
+    {% for category, msg in get_flashed_messages(with_categories=True) %}
+    <div class="alert alert-{{category}}">{{ msg }}</div>
+    {% endfor %}
+  </div>
+
 <div class="container mt-5">
   {% block content %}
   <!-- put the content here -->
